--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <script type="module" /app.js"></script>
+    <script type="module" src="./scripts/app.js"></script>
 </body>
 </html>
