--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Messagebot</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
-    <script type="module" src="./scripts/app.js"></script>
-</body>
+    <link rel="stylesheet" href="./styles/styles.css">                             //////////////////
+</head>                                                                            //Siehst du das?//
+<body>                                                                             //              //
+    <script type="module" src="./scripts/app.js"></script>                         //////////////////
+</body>s
 </html>
+
+///////////
+//   JA  //
+//////////
