Co-authored-by: mikareich <mikareich0@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Messagebot</title>
     <link rel="stylesheet" href="./styles/styles.css">                             
 </head>                                                                            
-<body>                                                                             
+<body>   
+       
+    <div class="messageContainer">
+        <input type="text" id="messageUser" class="messageInput">
+    </div>
     <script type="module" src="./scripts/app.js"></script>       
 </body>
 </html>
