neues desing userInput

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,20 @@
     <title>Messagebot</title>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
+
 <body>
-    test
-    
+    <div id="messages">
+        <div class="messageContainer">
+        </div>
+    </div>
+
+    <div class="messageInputContainer">
+        <input type="text" class="messageInput" id="messageUser">
+        <span class="btnSend">
+            Senden
+        </span>
+    </div>
     <script type="module" src="./scripts/app.js"></script>
 </body>
+
 </html>
